--- a/app/views/asset/property_or_land/PropertyOrLandAddressUkYesNoView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandAddressUkYesNoView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.property_or_land.routes._
+@import views.html.components.{SubmitButton, ErrorSummary, InputYesNo}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    submitButton: SubmitButton,
+    inputYesNo: InputYesNo,
+    errorSummary: ErrorSummary
 )
 
 @(form: Form[_], draftId: String, index : Int)(implicit request: Request[_], messages: Messages)
@@ -30,15 +34,15 @@
 
     @formHelper(action = PropertyOrLandAddressUkYesNoController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_yes_no(
+        @inputYesNo(
             field = form("value"),
             label = messages("propertyOrLand.addressUkYesNo.heading"),
             legendClass = Some("govuk-heading-l"),
             legendAsHeading = true
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
