--- a/app/views/asset/property_or_land/PropertyOrLandAddressYesNoView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandAddressYesNoView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.property_or_land.routes._
+@import views.html.components.{SubmitButton, ErrorSummary, InputYesNo}
 
 @this(
-    main_template: MainTemplate,
-    formHelper: FormWithCSRF
+        main_template: MainTemplate,
+        formHelper: FormWithCSRF,
+        submitButton: SubmitButton,
+        inputYesNo: InputYesNo,
+        errorSummary: ErrorSummary
 )
 
 @(form: Form[_], index: Int, draftId: String)(implicit request: Request[_], messages: Messages)
@@ -30,15 +34,15 @@
 
     @formHelper(action = PropertyOrLandAddressYesNoController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_yes_no(
+        @inputYesNo(
             field = form("value"),
             label = messages("propertyOrLand.addressYesNo.heading"),
             legendClass = Some("govuk-heading-l"),
             legendAsHeading = true
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
