--- a/app/views/asset/property_or_land/PropertyOrLandAnswersView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandAnswersView.scala.html
@@ -15,11 +15,15 @@
  *@
 
 @import controllers.asset.property_or_land.routes._
-@import viewmodels.{AnswerSection, RepeaterAnswerSection, Section}
+@import viewmodels.Section
+@import views.html.components.{SubmitButton, Heading}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    submitButton: SubmitButton,
+    heading: Heading,
+    govukSummaryList: GovukSummaryList
 )
 
 @(index : Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
@@ -29,17 +33,12 @@
     showBackLink = true
 ) {
 
-@components.heading("propertyOrLand.answers.heading")
-
-    @for(section <- answerSections){
-        @{section match {
-            case a: AnswerSection => components.answer_section(a)
-            case r: RepeaterAnswerSection => components.repeater_answer_section(r)
-            }
-        }
-    }
 
     @formHelper(action = PropertyOrLandAnswerController.onSubmit(index, draftId), 'autoComplete -> "off") {
-        @components.submit_button()
-    }
+
+        @heading("propertyOrLand.answers.heading")
+
+        @govukSummaryList(SummaryList(rows = formatSections(answerSections)))
+
+        @submitButton()    }
 }
