--- a/app/views/asset/property_or_land/PropertyOrLandInternationalAddressView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandInternationalAddressView.scala.html
@@ -16,10 +16,14 @@
 
 @import controllers.asset.property_or_land.routes._
 @import utils.InputOption
+@import views.html.components.{ErrorSummary, InternationalAddress, SubmitButton}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    errorSummary: ErrorSummary,
+    internationalAddress: InternationalAddress,
+    submitButton: SubmitButton
 )
 
 @(form: Form[_], countryOptions: Seq[InputOption], draftId: String, index: Int)(implicit request: Request[_], messages: Messages)
@@ -31,18 +35,15 @@
 
     @formHelper(action = PropertyOrLandInternationalAddressController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        <fieldset>
+        @internationalAddress(
+            form = form,
+            legend = messages("propertyOrLand.internationalAddress.heading"),
+            legendAsHeading = true,
+            countryOptions = countryOptions
+        )
 
-            <legend>
-                @components.heading("propertyOrLand.internationalAddress.heading")
-            </legend>
-
-            @components.international_address(form, countryOptions)
-
-        </fieldset>
-
-        @components.submit_button(submitClass = Some("countryLookupHelper"))
+        @submitButton(submitClass = Some("countryLookupHelper"))
     }
 }
