--- a/app/views/asset/property_or_land/PropertyOrLandTotalValueView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandTotalValueView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.property_or_land.routes._
+@import views.html.components.{ErrorSummary, InputText, SubmitButton}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    errorSummary: ErrorSummary,
+    inputText: InputText,
+    submitButton: SubmitButton
 )
 
 @(form: Form[_], index: Int, draftId: String)(implicit request: Request[_], messages: Messages)
@@ -30,19 +34,18 @@
 
     @formHelper(action = PropertyOrLandTotalValueController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_text(
+        @inputText(
             field = form("value"),
             label = messages("propertyOrLand.totalValue.heading"),
             labelClass = Some("govuk-heading-l"),
             labelAsHeading = true,
             hint = Some(messages("propertyOrLand.totalValue.hint")),
-            symbolText = Some(messages(s"symbolText.asSterling")),
-            symbol = Some("currency"),
+            prefix = Some(messages(s"symbolText.asSterling")),
             inputMode = Some("numeric")
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
