--- a/app/views/asset/shares/ShareAnswersView.scala.html
+++ b/app/views/asset/shares/ShareAnswersView.scala.html
@@ -16,10 +16,14 @@
 
 @import controllers.asset.shares.routes._
 @import viewmodels.{AnswerSection, RepeaterAnswerSection, Section}
+@import views.html.components.{SubmitButton, Heading}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    submitButton: SubmitButton,
+    heading: Heading,
+    govukSummaryList: GovukSummaryList
 )
 
 @(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
@@ -29,17 +33,10 @@
     showBackLink = true
 ) {
 
-@components.heading("shares.answers.heading")
-
-    @for(section <- answerSections){
-        @{section match {
-            case a: AnswerSection => components.answer_section(a)
-            case r: RepeaterAnswerSection => components.repeater_answer_section(r)
-            }
-        }
-    }
-
     @formHelper(action = ShareAnswerController.onSubmit(index, draftId), 'autoComplete -> "off") {
-        @components.submit_button()
-    }
+        @heading("shares.answers.heading")
+
+        @govukSummaryList(SummaryList(rows = formatSections(answerSections)))
+
+        @submitButton()    }
 }
