--- a/app/views/asset/shares/ShareClassView.scala.html
+++ b/app/views/asset/shares/ShareClassView.scala.html
@@ -16,10 +16,14 @@
 
 @import controllers.asset.shares.routes._
 @import models.ShareClass
+@import views.html.components.{ErrorSummary, InputRadio, SubmitButton}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    errorSummary: ErrorSummary,
+    inputRadio: InputRadio,
+    submitButton: SubmitButton
 )
 
 @(form: Form[_], draftId: String, index : Int, companyName: String)(implicit request: Request[_], messages: Messages)
@@ -31,9 +35,9 @@
 
     @formHelper(action = ShareClassController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_radio(
+        @inputRadio(
             field = form("value"),
             legend = messages("shares.class.heading", companyName),
             legendClass = Some("govuk-heading-l"),
@@ -41,6 +45,6 @@
             legendAsHeading = true
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
