--- a/app/views/asset/shares/SharePortfolioNameView.scala.html
+++ b/app/views/asset/shares/SharePortfolioNameView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.shares.routes._
+@import views.html.components.{ErrorSummary, InputText, SubmitButton}
 
 @this(
-    main_template: MainTemplate,
-    formHelper: FormWithCSRF
+        main_template: MainTemplate,
+        formHelper: FormWithCSRF,
+        errorSummary: ErrorSummary,
+        inputText: InputText,
+        submitButton: SubmitButton
 )
 
 @(form: Form[_], draftId: String, index : Int)(implicit request: Request[_], messages: Messages)
@@ -30,15 +34,15 @@
 
     @formHelper(action = SharePortfolioNameController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_text(
+        @inputText(
             field = form("value"),
             label = messages("shares.portfolioName.heading"),
             labelClass = Some("govuk-heading-l"),
             labelAsHeading = true
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
