--- a/app/views/asset/shares/ShareQuantityInTrustView.scala.html
+++ b/app/views/asset/shares/ShareQuantityInTrustView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.shares.routes._
+@import views.html.components.{ErrorSummary, InputText, SubmitButton}
 
 @this(
-    main_template: MainTemplate,
-    formHelper: FormWithCSRF
+        main_template: MainTemplate,
+        formHelper: FormWithCSRF,
+        errorSummary: ErrorSummary,
+        inputText: InputText,
+        submitButton: SubmitButton
 )
 
 @(form: Form[_], draftId: String, index: Int, companyName: String)(implicit request: Request[_], messages: Messages)
@@ -30,9 +34,9 @@
 
     @formHelper(action = ShareQuantityInTrustController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_text(
+        @inputText(
             field = form("value"),
             label = messages("shares.quantityInTrust.heading", companyName),
             labelClass = Some("govuk-heading-l"),
@@ -42,6 +46,6 @@
             pattern = Some("[0-9]*")
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
