--- a/app/views/asset/shares/ShareValueInTrustView.scala.html
+++ b/app/views/asset/shares/ShareValueInTrustView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.shares.routes._
+@import views.html.components.{ErrorSummary, InputText, SubmitButton}
 
 @this(
-    main_template: MainTemplate,
-    formHelper: FormWithCSRF
+        main_template: MainTemplate,
+        formHelper: FormWithCSRF,
+        errorSummary: ErrorSummary,
+        inputText: InputText,
+        submitButton: SubmitButton
 )
 
 @(form: Form[_], draftId: String, index: Int, companyName: String)(implicit request: Request[_], messages: Messages)
@@ -30,19 +34,18 @@
 
     @formHelper(action = ShareValueInTrustController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_text(
+        @inputText(
             field = form("value"),
             label = messages("shares.valueInTrust.heading", companyName),
-            symbolText = Some(messages(s"symbolText.asSterling")),
-            symbol = Some("currency"),
+            prefix = Some(messages(s"symbolText.asSterling")),
             labelClass = Some("govuk-heading-l"),
             labelAsHeading = true,
             hint = Some(messages("shares.valueInTrust.hint")),
             inputMode = Some("numeric")
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
